again tried to fix issue in SecurityConfig.java file