@@ -36,28 +36,17 @@ public class SecurityConfig {
         return http.build();
     }
 
+    
+
     @Bean
-public CorsConfigurationSource corsConfigurationSource() {
-    CorsConfiguration configuration = new CorsConfiguration();
-    
-    // Yahan apni Render frontend ka URL aur localhost dono dalein
-    configuration.setAllowedOrigins(List.of(
-        "http://localhost:5173", 
-        "http://localhost:3000",
-        "https://projectmate-the-matchmaker-and-ai-mentor-cwmd.onrender.com" // Aapka exact frontend URL
-    )); 
-
-    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-    
-    // Headers ko "*" kar dein taaki koi header block na ho
-    configuration.setAllowedHeaders(List.of("*")); 
-    
-    configuration.setAllowCredentials(true);
-    
-    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-    source.registerCorsConfiguration("/**", configuration);
-    return source;
-}
-
-    
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOriginPatterns(List.of("*")); // Allow all origins including deployed frontend
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
+        configuration.setAllowCredentials(true);
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
+    }
 }
